# embedded-platform

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: future.rs  lib.rs
src/: gpio.rs  i2c.rs  io.rs  lib.rs  platform.rs  prelude.rs  serial.rs  specs.rs  spi.rs  time.rs  timer.rs
src/gpio/: get.rs  set.rs
src/i2c/: begin_read.rs  begin_write.rs  initialize.rs
src/io/: close.rs  flush.rs  read.rs  read_exact.rs  shutdown.rs  write.rs  write_all.rs
src/platform/: initialize.rs
src/specs/: feather.rs
src/spi/: complete.rs
src/timer/: start.rs  tick.rs  ticks.rs
