[package]
name = "embedded-platform"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.1", default-features = false, features = ["async-await"] }

[workspace]
members = ["platforms/nrf52840"]
