[package]
name = "embedded-platform"
description = "Holistic embedded device support in a batteries-included manner"
documentation = "https://docs.rs/embedded-platform"
repository = "https://github.com/dflemstr/embedded-platform"
keywords = ["embedded", "platform", "io", "async"]
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
version = "0.1.2"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.1", default-features = false, features = ["async-await"] }

[workspace]
members = ["core", "platforms/nrf52840"]

[features]
rt = []
